# minireview-mcp-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gemini-cli.yaml  monitor_prs.sh  pyproject.toml  requirements.txt  server.py  test_agent_live.sh
.gemini/: GEMINI.md  settings.json
.github/workflows/: ci.yml
agent/: agent.py
examples/: basic_usage.py
minireview_agent/: agent.py
minireview_client/: client.py  enums.py  exceptions.py
tests/: test_client.py  test_integration_client.py  test_integration_server.py  test_server.py  test_server_schemas.py
tests/cassettes/test_integration_client/: setup.yaml  test_get_categories.yaml  test_get_collections.yaml  test_get_game_details.yaml  test_get_game_ratings.yaml  test_get_games_list.yaml  test_get_games_list_comprehensive.yaml  test_get_games_of_the_week.yaml  test_get_home.yaml  test_get_minireview_pick.yaml  test_get_side_content.yaml  test_get_similar_games.yaml  test_get_similar_games_comprehensive.yaml  test_get_similar_games_main_page.yaml  test_get_top_games.yaml  test_get_top_user_ratings.yaml  test_get_upcoming_games.yaml
tests/cassettes/test_integration_server/: test_get_categories_integration.yaml  test_get_collections_integration.yaml  test_get_game_details_integration.yaml  test_get_game_ratings_integration.yaml  test_get_games_list_integration.yaml  test_get_games_list_with_details_integration.yaml  test_get_games_of_the_week_integration.yaml  test_get_home_integration.yaml  test_get_minireview_pick_integration.yaml  test_get_similar_games_integration.yaml  test_get_similar_games_with_details_integration.yaml  test_get_top_user_ratings_integration.yaml  test_get_upcoming_games_integration.yaml
