[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
]

# Allow unused variables that start with an underscore.
# ruff: noqa: PLC0602
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file doesn't have a `from __future__ import annotations` import.
keep-runtime-typing = true

[project]
name = "minireview-client"
version = "0.1.0"
dependencies = [
    "requests==2.32.5",
]

[project.optional-dependencies]
server = [
    "fastmcp",
]